--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "jquery": "^3.3.1",
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "popper.js": "^1.15.0",
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
@@ -133,7 +135,7 @@
     "file-loader": "2.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "image-webpack-loader": "4.4.0",
+    "image-webpack-loader": "^4.6.0",
     "imports-loader": "0.8.0",
     "jest-cli": "23.6.0",
     "jest-styled-components": "6.2.2",
@@ -150,7 +152,7 @@
     "rimraf": "2.6.2",
     "shelljs": "^0.8.2",
     "style-loader": "0.23.1",
-    "stylelint": "9.6.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-recommended": "2.1.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.5.0",
