--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
     "styled-components": "4.0.2",
-    "warning": "4.0.2"
+    "warning": "4.0.2",
+    "webpack": "4.23.1"
   },
   "devDependencies": {
     "@babel/cli": "7.1.2",
@@ -137,7 +138,7 @@
     "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "^4.6.0",
     "imports-loader": "0.8.0",
-    "jest-cli": "23.6.0",
+    "jest-cli": "^24.7.1",
     "jest-styled-components": "6.2.2",
     "lint-staged": "7.3.0",
     "ngrok": "3.1.0",
@@ -159,7 +160,6 @@
     "svg-url-loader": "2.3.2",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.2",
-    "webpack": "4.23.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3 ",
