--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "fontfaceobserver": "2.0.13",
     "history": "4.7.2",
     "hoist-non-react-statics": "3.0.1",
+    "html-webpack-plugin": "3.2.0",
     "immutable": "3.8.2",
     "intl": "1.2.5",
     "invariant": "2.2.4",
@@ -91,6 +92,7 @@
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
     "styled-components": "4.0.2",
+    "universal-cookie": "^3.1.0",
     "warning": "4.0.2",
     "webpack": "4.23.1"
   },
@@ -135,7 +137,6 @@
     "eslint-plugin-redux-saga": "0.9.0",
     "file-loader": "2.0.0",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "^4.6.0",
     "imports-loader": "0.8.0",
     "jest-cli": "^24.7.1",
