Lecture link embed

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
@@ -83,6 +83,7 @@
     "react-dom": "16.6.0",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
+    "react-player": "^1.11.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
